--- a/src/app/heroes/heroes-list/heroes-list.component.html
+++ b/src/app/heroes/heroes-list/heroes-list.component.html
@@ -1,6 +1,6 @@
 <div class=""card>
     <div class=""card-header>
-        <p>Lista Dragon Ball</p>
+        <p>Lista de Dragon Ball</p>
     </div>
     <div class="dard-body">
         <div class="row">
