--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <div class="container">
   <div class="row">
+    <!--<p>Carlos Salinas</p>
+
+    <div>
+      {{title}}
+    </div>-->
 
     <hr>
     <app-heroes-list></app-heroes-list>
