--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,8 @@
     </div>-->
 
     <hr>
-    <app-heroes-list></app-heroes-list>
-
-    
-    <router-outlet />
-
-
-
+  <!---<app-heroes-list></app-heroes-list>-->
+  <app-operas-bas/>
+  <router-outlet />
   </div>
 </div>
