--- a/src/app/heroes/heroes-list/heroes-list.component.html
+++ b/src/app/heroes/heroes-list/heroes-list.component.html
@@ -30,7 +30,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let heroe of heroes">
+                    <tr *ngFor="let heroe of heroes | heroFilter:listfilter">
                         <td>
                             <img *ngIf="muestraImage" [src]="heroe.imagen" [style.width.px]="imageWidth" [style.margin.px]="imageMargin">
                         </td>
