--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,8 @@
 
     <hr>
   <!---<app-heroes-list></app-heroes-list>-->
-  <app-operas-bas/>
+  <!--<app-operas-bas/>-->
+  <app-cinepolis></app-cinepolis>
   <router-outlet />
   </div>
 </div>
