--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,8 @@
     <hr>
   <!---<app-heroes-list></app-heroes-list>-->
   <!--<app-operas-bas/>-->
-  <app-cinepolis></app-cinepolis>
+  <!--<app-cinepolis></app-cinepolis>-->
+  <app-resistencias></app-resistencias>
   <router-outlet />
   </div>
 </div>
